data/derived/comb/progs/unify/prog3672.ml.out
Characters 73-85:
  if List.length xs != 0 then List.nth xs 0 + sumList(List.hd xs);;
                                                     ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
